<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:id="@+id/contactcontainer"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contactname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            app:met_floatingLabel="normal"
            app:met_maxCharacters="20"
            app:met_singleLineEllipsis="true"
            android:hint="@string/et_hint_owner"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contactmail"
            android:layout_width="match_parent"
            android:layout_below="@+id/contactname"

            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            app:met_floatingLabel="normal"
            android:inputType="textEmailAddress"

            android:hint="@string/et_hint_mail"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contactphone"
            android:layout_width="match_parent"
            android:layout_below="@+id/contactmail"

            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            app:met_floatingLabel="normal"
            app:met_maxCharacters="20"
            app:met_singleLineEllipsis="true"
            android:inputType="number"
            android:hint="@string/et_hint_number"/>



    </RelativeLayout>

</android.support.constraint.ConstraintLayout>