<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/cardview_light_background"
    tools:context=".ui.activities.NoticeDetail2">

    <include
        layout="@layout/app_bar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/noticecontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        app:layout_constraintBottom_toTopOf="@id/navigation">

        <com.beardedhen.androidbootstrap.BootstrapDropDown
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:bootstrapSize="md"

            app:dropdownResource="@array/bootstrap_dropdown_notice_categories"
            app:fontAwesomeIcon="fa_amazon"
            app:materialIcon="md_add_shopping_cart"
            app:roundedCorners="true"
            app:showOutline="true"

            />


        <LinearLayout
            android:id="@+id/ltitle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categories"
            android:orientation="horizontal">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/noticetitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="0.7"
                android:hint="@string/et_hint_title"
                app:met_floatingLabel="normal"
                app:met_maxCharacters="80"
                app:met_singleLineEllipsis="true" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/noticeprice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="0.3"
                android:hint="@string/et_hint_price"
                android:inputType="number"
                app:met_floatingLabel="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ltitle"
            android:layout_margin="5dp"

            android:orientation="vertical">


            <ImageView
                android:id="@+id/adj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/ic_attachment_black_24dp" />

            <com.rengwuxian.materialedittext.MaterialEditText

                android:id="@+id/noticebody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:hint="@string/et_hint_body"

                app:met_floatingLabel="normal" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contactcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:visibility="gone">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnselectclient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fab_margin"
            app:bootstrapBrand="primary"
            app:bootstrapText="Seleccionar"
            app:fontAwesomeIcon="fa_align_center"

            app:roundedCorners="true"
            app:showOutline="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contactname"
            android:layout_below="@+id/btnselectclient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/et_hint_owner"
            app:met_floatingLabel="normal"
            app:met_maxCharacters="20"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contactmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/contactname"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/et_hint_mail"
            android:inputType="textEmailAddress"

            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contactphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/contactmail"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/et_hint_number"
            android:inputType="number"
            app:met_floatingLabel="normal"
            app:met_maxCharacters="20"
            app:met_singleLineEllipsis="true" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imagecontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:visibility="gone">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fab_margin"
            app:bootstrapBrand="primary"
            app:bootstrapText="Seleccionar"
            app:fontAwesomeIcon="fa_align_center"
            app:materialIcon="md_add_a_photo"
            app:roundedCorners="true"
            app:showOutline="true" />

        <LinearLayout
            android:id="@+id/lphotoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnselect"
            android:layout_margin="@dimen/fab_margin"
            android:orientation="horizontal">


            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/Ima"

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/wall"
                app:bootstrapBrand="info"
                app:hasBorder="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/photoa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/et_hint_photoa"

                app:met_floatingLabel="normal"
                app:met_singleLineEllipsis="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lphotob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lphotoa"
            android:layout_margin="@dimen/fab_margin"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/Imb"

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/wall"
                app:bootstrapBrand="info"
                app:hasBorder="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/photob"
                android:layout_width="match_parent"


                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/et_hint_photob"
                android:inputType="textEmailAddress"

                app:met_floatingLabel="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lphotoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lphotob"
            android:layout_margin="@dimen/fab_margin"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/Imc"

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/wall"
                app:bootstrapBrand="info"
                app:bootstrapSize="xs"
                app:hasBorder="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/photoc"
                android:layout_width="match_parent"


                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/et_hint_photoc"

                android:inputType="number"
                app:met_floatingLabel="normal"
                app:met_singleLineEllipsis="true" />
        </LinearLayout>


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabinsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="@+id/navigation"

        app:srcCompat="@drawable/ic_new_white_24dp" />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>